--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -3,6 +3,27 @@
 {% block content %}
 
     <div class="row mt-4">
+        <div class="col-2">
+            <a href="/">All</a>
+        </div>
+        <div class="col-2">
+            <a href="?status=1">Completed</a>
+        </div>
+        <div class="col-2">
+            <a href="?status=0">Pending</a>
+        </div>
+        <div class="col-2">
+            <a href="?priority=high">High Priority</a>
+        </div>
+        <div class="col-2">
+            <a href="?priority=normal">Normal Priority</a>
+        </div>
+        <div class="col-2">
+            <a href="?priority=low">Low Priority</a>
+        </div>
+    </div>
+
+    <div class="row mt-4">
         <div class="col-10 mx-auto">
             <ul class="list-group">
                 {% for todo_item in todo_items %}
@@ -12,6 +33,7 @@
 <!--                        <form action="delete_todo/{{todo_item.id}}" method="post">-->
                             <form action="{% url 'delete_todo' todo_item.id %}" method="post">
                                 {% csrf_token %}
+
                                 <button type="submit" class="btn btn-sm btn-danger ">Delete</button>
                             </form>
                         </div>
@@ -35,6 +57,14 @@
                         {% csrf_token %}
                         <div class="mb-3">
                             <input type="text" name="content" class="form-control" placeholder="Type here....">
+                        </div>
+                        <div class="mb-3">
+                            <select  name="priority" class="form-control">
+                                <option value="none" selected disabled hidden>Select a priority</option>
+                                <option value="high">High</option>
+                                <option value="normal">Normal</option>
+                                <option value="low">Low</option>
+                            </select>
                         </div>
                         <div class="float-end">
                             <button type="submit" class="btn btn-primary mb-2">Submit</button>
