--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -31,10 +31,11 @@
 
                         <div class="float-end">
 <!--                        <form action="delete_todo/{{todo_item.id}}" method="post">-->
-                            <form action="{% url 'delete_todo' todo_item.id %}" method="post">
+                            <button type="submit" class="btn btn-sm btn-warning " data-bs-toggle="modal" data-bs-target="#updateTodoModal" data-bs-whatever="updateTodo"><i class="far fa-edit"></i></button>
+                            <form action="{% url 'delete_todo' todo_item.id %}" method="post" style="display:inline-block;">
                                 {% csrf_token %}
 
-                                <button type="submit" class="btn btn-sm btn-danger ">Delete</button>
+                                <button type="submit" class="btn btn-sm btn-danger "><i class="far fa-trash-alt"></i></button>
                             </form>
                         </div>
                     </li>
@@ -43,13 +44,13 @@
         </div>
     </div>
 
-    <button type="button" class="btn btn-primary btn-lg circle-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" ><i class="fas fa-plus"></i></button>
+    <button type="button" class="btn btn-primary btn-lg circle-btn" data-bs-toggle="modal" data-bs-target="#addTodoModal" data-bs-whatever="addTodo"><i class="fas fa-plus"></i></button>
 
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal fade" id="addTodoModal" tabindex="-1" aria-labelledby="addTodoModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Add Item</h5>
+                    <h5 class="modal-title" id="addTodoModalLabel">Add Item</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
@@ -59,7 +60,7 @@
                             <input type="text" name="content" class="form-control" placeholder="Type here....">
                         </div>
                         <div class="mb-3">
-                            <select  name="priority" class="form-control">
+                            <select  name="priority" class="form-select">
                                 <option value="none" selected disabled hidden>Select a priority</option>
                                 <option value="high">High</option>
                                 <option value="normal">Normal</option>
@@ -78,5 +79,64 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="updateTodoModal" tabindex="-1" aria-labelledby="updateTodoModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="updateTodoModalLabel">Update Item</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form action="add_todo" method="post">
+                        {% csrf_token %}
+                        <div class="mb-3">
+                            <input type="text" id="content"  name="content" class="form-control" placeholder="Type here....">
+                        </div>
+                        <div class="mb-3">
+                            <select id="priority"  name="priority" class="form-select">
+                                <option value="none" selected disabled hidden>Select a priority</option>
+                                <option value="high">High</option>
+                                <option value="normal">Normal</option>
+                                <option value="low">Low</option>
+                            </select>
+                        </div>
+                        <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+                            <label class="form-check-label" for="flexSwitchCheckDefault">Complete</label>
+                        </div>
+                        <div class="float-end">
+                            <button type="submit" class="btn btn-primary mb-2">Update</button>
+                        </div>
+                    </form>
+                </div>
+<!--                <div class="modal-footer">-->
+<!--                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>-->
+<!--                    <button type="button" class="btn btn-primary">Send message</button>-->
+<!--                </div>-->
+            </div>
+        </div>
+    </div>
+
+    <script>
+
+        var exampleModal = document.getElementById('updateTodoModal')
+        exampleModal.addEventListener('show.bs.modal', function (event) {
+          // Button that triggered the modal
+          var button = event.relatedTarget
+          // Extract info from data-bs-* attributes
+          //var recipient = button.getAttribute('data-bs-whatever')
+          // If necessary, you could initiate an AJAX request here
+          // and then do the updating in a callback.
+          //
+
+              // Update the modal's content.
+              var modalBodyInput = exampleModal.querySelector('#content')
+              modalBodyInput.value = "Update Todo"
+              console.log(modalBodyInput)
+              console.log('inside updatetodomodel listener')
+
+        })
+    </script>
 
 {% endblock %}
