--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -88,7 +88,7 @@
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form method="post">
+                    <form method="post" >
                         {% csrf_token %}
                         <div class="mb-3">
                             <input type="text" id="content"  name="content" class="form-control" placeholder="Type here....">
@@ -102,7 +102,7 @@
                             </select>
                         </div>
                         <div class="form-check form-switch">
-                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+                            <input class="form-check-input" type="checkbox" name ="status"  id="flexSwitchCheckDefault">
                             <label class="form-check-label" for="flexSwitchCheckDefault">Complete</label>
                         </div>
                         <div class="float-end">
@@ -120,14 +120,16 @@
 
     <script>
 
-        let exampleModal = document.getElementById('updateTodoModal')
+        let exampleModal = document.getElementById('updateTodoModal');
         exampleModal.addEventListener('show.bs.modal', function (event) {
             // Button that triggered the modal
             let button = event.relatedTarget
+
             // Extract info from data-bs-* attributes
             let item_id = button.getAttribute('data-bs-whatever')
+
             //set the action attribute of update form
-            exampleModal.querySelector('form').action='add_item/'+item_id);
+            exampleModal.querySelector('form').action='update_todo/'+item_id;
 
             $.ajax({
                 method: 'GET',
@@ -151,7 +153,7 @@
                     //console.log('inside updatetodomodel listener');
                 },
             });
-        })
+        });
     </script>
 
 {% endblock %}
