--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -14,16 +14,18 @@
     <title>ToDo App</title>
   </head>
   <body>
-
+      {% if request.user.is_authenticated %}
       <nav class="navbar navbar-dark bg-dark">
         <!-- Navbar content -->
 
         <a class="navbar-brand" href="#">ToDo App</a>
+
+        <span style="color:white">Hello, {{ request.user }}</span>
+        <a class="navbar-brand" href="{% url 'logout' %}">Logout</a>
       </nav>
+      {% endif %}
 
-
-
-    <div class="container">
+    <div class="container h-100">
       {% block content %}{% endblock %}
     </div>
 
