--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="row ">
-        <div class="col-5 mx-auto">
-            <div  class="d-flex justify-content-center">
+    <div class="row d-flex justify-content-center  ">
+        <div class="col-5">
+
+
+            <div  class="d-flex justify-content-center ">
                 <h1>LOGIN FORM</h1>
             </div>
             <form method="post" action="">
@@ -11,20 +13,24 @@
 
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon1"><i class="fas fa-user"></i></span>
-                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="text" name="username" class="form-control" placeholder="Username" required>
                 </div>
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="basic-addon2"><i class="fas fa-key"></i></span>
-                    <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+                    <input type="password" name="password" class="form-control" placeholder="Password" required>
                 </div>
-                <div class=" d-flex justify-content-center mb-3">
+                <div class="d-flex justify-content-center  mb-3">
                     <button type="submit" class="btn btn-primary btn-lg mx-auto  ">Login</button>
                 </div>
             </form>
-            {{form.errors}}
-            <div class="d-flex justify-content-center">
+            {% for message in messages %}
+                {{message}}
+            {% endfor %}
+            <div class="d-flex justify-content-center ">
                 <p>Don't have an account? <a href="{% url 'register' %}">REGISTER HERE</a></p>
             </div>
         </div>
     </div>
 {% endblock %}
+
+
