--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 
 {% block content %}
-    <div class="row ">
-        <div class="col-5 mx-auto">
+    <div class="row d-flex justify-content-center ">
+        <div class="col-5 ">
             <div class="d-flex justify-content-center">
                 <h1>REGISTRATION FORM</h1>
             </div>
