--- a/todo/templates/index.html
+++ b/todo/templates/index.html
@@ -24,7 +24,7 @@
             </div>
 
             <div class="col-10 mx-auto">
-                <input type="date" class="form-control" name="start_date" class="form-control">
+                <input type="date" class="form-control" name="start_date" >
             </div>
             <div class="col-10 mx-auto">
                 <input type="date" name="end_date" class="form-control">
