--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -19,16 +19,19 @@
                     <span class="input-group-text" id="basic-addon2"><i class="fas fa-key"></i></span>
                     <input type="password" name="password" class="form-control" placeholder="Password" required>
                 </div>
-                <div class="d-flex justify-content-center  mb-3">
+                <div class=" mb-3">
                     <button type="submit" class="btn btn-primary btn-lg mx-auto  ">Login</button>
+                    <small class="text-muted mx-4">
+                        <a href="{% url 'password_reset' %}">Forgot Password?</a>
+                    </small>
                 </div>
             </form>
             {% for message in messages %}
                 {{message}}
             {% endfor %}
-            <div class="d-flex justify-content-center ">
-                <p>Don't have an account? <a href="{% url 'register' %}">REGISTER HERE</a></p>
-            </div>
+            <small class=" text-muted d-flex justify-content-center ">
+                <p>Don't have an account? <a href="{% url 'register' %}">Register Here</a></p>
+            </small>
         </div>
     </div>
 {% endblock %}
